--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+    --background-color-light: #ffffff; /* Cor de fundo para o tema claro */
+    --background-color-dark: #000000;  /* Cor de fundo para o tema escuro */
+  }
+  
+  body {
+    background-color: var(--background-color-light); /* Cor de fundo padrão */
+  }
+  
+  @media (prefers-color-scheme: dark) {
+    body {
+      background-color: var(--background-color-dark); /* Cor de fundo para o tema escuro */
+    }
+  }
+  
