--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,9 +14,9 @@
     @media (prefers-color-scheme: dark) {
         body {
             background-color: var(--background-color-dark); /* Cor de fundo para o tema escuro */
-            p {
-                color: white;
-            }
         }
-}
-  
+    }
+    
+    p, h1, a {
+        color: white;
+    }
