--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,10 +17,10 @@
         }
     }
     
-    p, h1, h2, a {
+    p, h1, h2, h3, a {
         color: white;
     }
 
-    h2 {
+    h2, h3 {
         font-size: 24px;
     }
